[project]
name = ""
version = ""
description = ""
authors = [
    {name = "JiangXiaoqiang", email = "jiangtingqiang@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
name = "pypi"
url = "http://pypi.org/simple"
verify_ssl = true

[[tool.pdm.source]]
name = "fallback"
url = "http://pypi.org/simple"
verify_ssl = true