[project]
name = ""
version = ""
description = ""
authors = [
    {name = "JiangXiaoqiang", email = "jiangtingqiang@gmail.com"},
]
dependencies = [
    "requests>=2.5.4.1",
    "pyjwt>=2.8.0",
    "pytest>=8.2.1",
    "rdpywheel>=0.1.34",
    "pytest-html>=4.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
